# LuaDroid

./: build_luajit_android.sh  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: main.lua  main2.lua  todo  程序跑完以后崩溃.lua
app/src/main/java/com/xyz/luadroid/app/: Foo.java  Foo1.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
luadroid/: build.gradle.kts
luadroid/src/main/: AndroidManifest.xml
luadroid/src/main/assets/: main.lua
luadroid/src/main/assets/luadroid/: uuid.lua
luadroid/src/main/cpp/: CMakeLists.txt  HashMap.h  TJNIEnv.h  base_func.h  common.h  farmhash.cpp  func_info.h  java_type.cpp  jtype.h  luadroid.cpp  luadroid.cpp.bak  luadroid.h  macros.h  sym.map  utf8.h
luadroid/src/main/cpp/imgui/: CMakeLists.txt
luadroid/src/main/cpp/lua/: CMakeLists.txt
luadroid/src/main/cpp/luacjson/: CMakeLists.txt
luadroid/src/main/cpp/luadroid/: CMakeLists.txt  FakeVector.h  MString.h  Vector.h  env.h  farmhash.h  func_info.h  java_member.h  java_object.h  java_type.h  logger.h  lua_object.h  luadroid.cpp  myarray.h  script_context.cpp  tls.h  utf8.cpp
luadroid/src/main/cpp/lualfs/: CMakeLists.txt
luadroid/src/main/cpp/luaopenssl/: CMakeLists.txt
luadroid/src/main/cpp/luasocket/: CMakeLists.txt
luadroid/src/main/cpp/luassl/: CMakeLists.txt
luadroid/src/main/cpp/luathread/: CMakeLists.txt  auxiliar.c  auxiliar.h  ltconf.h  luathread.c  luathread.h
luadroid/src/main/cpp/luazip/: CMakeLists.txt  lua_zip.c
luadroid/src/main/cpp/luazlib/: CMakeLists.txt  lua_zlib.c
luadroid/src/main/cpp/zip/: CMakeLists.txt  config.h
luadroid/src/main/java/com/android/dx/: AnnotationId.java  DexMaker.java
luadroid/src/main/java/com/android/dx/stock/: InterfaceGenerator.java
luadroid/src/main/java/com/xyz/luadroid/: ClassBuilder.java  DataMap.java  FileUtils.java  Indexer.java  IteratorFactory.java  LibInstaller.java  ListIndexer.java  ListIterator.java  LuaException.java  LuaFunction.java  MapIterator.java  ScriptContext.java  TableConverter.java
luadroid/src/main/java/com/xyz/luadroid/set/: BaseNode.java  BaseSet.java  LightNodeSet.java  LightSet.java  SetUtils.java
luadroid/src/main/jniLibs/arm64-v8a/: build.txt
